--- a/ZnajdzTo/bin/AndroidManifest.xml
+++ b/ZnajdzTo/bin/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name="activites.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,7 +24,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".DrugaAktywnosc"
+            android:name="activites.DrugaAktywnosc"
             android:label="@string/title_activity_druga_aktywnosc" >
         </activity>
     </application>
